<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="ali_vsdk_network_error">网络不给力，请稍后再试</string>
    <string name="ali_vsdk_refresh">刷新</string>
    <string name="ali_vsdk_tips">安全验证</string>
    <string name="ali_vsdk_tips_finish">验证通过</string>
    <string name="ali_vsdk_tips_sub">为了你的帐号安全，本次登录需要进行验证。请将下方的图标，移动到圆形区域内</string>
    <string name="ali_vsdk_titlebar_back">返回</string>
    <string name="ali_vsdk_titlebar_name" />
    <string name="ali_vsdk_verify_call_calling">电话拨打中...请留意一下来电</string>
    <string name="ali_vsdk_verify_call_dialog_cancel">取消</string>
    <string name="ali_vsdk_verify_call_dialog_ok">接听</string>
    <string name="ali_vsdk_verify_call_goto_tips">现在接听语音安全验证?</string>
    <string name="ali_vsdk_verify_call_recall">收不到验证码，请重新接听电话</string>
    <string name="ali_vsdk_verify_call_title">语音安全验证</string>
    <string name="ali_vsdk_verify_code">验证码</string>
    <string name="ali_vsdk_verify_error">验证码错误，请重新输入</string>
    <string name="ali_vsdk_verify_error_call">验证码错误，请挂断电话，重新发送验证码</string>
    <string name="ali_vsdk_verify_in_progress">阿里聚安全验证中</string>
    <string name="ali_vsdk_verify_no_code">请输入验证码</string>
    <string name="ali_vsdk_verify_number">手机号</string>
    <string name="ali_vsdk_verify_sms_send_code">发送验证码</string>
    <string name="ali_vsdk_verify_sms_subtitle">已帮您抵御验证码劫持风险</string>
    <string name="ali_vsdk_verify_sms_timeout">%1$d秒后重新接收</string>
    <string name="ali_vsdk_verify_sms_title">短信安全验证</string>
    <string name="ali_vsdk_verify_sms_use_call">无法通过？接听语音安全验证</string>
    <string name="ali_vsdk_verify_submit">提交</string>
    <string name="Player_error_timeout">网络不太给力哦,如需观看,请重试。</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="account_bind_other_tag">%1$s账号</string>
    <string name="account_bind_top_tag">正在使用%1$s账号登录优酷</string>
    <string name="account_changed">帐号已发生变更，请重新登录后再试</string>
    <string name="action_sheet_cancel_title">取消</string>
    <string name="add_collection_to_favorite_succeed">收藏成功，可在个人中心查看</string>
    <string name="add_follow_fail">追剧失败~</string>
    <string name="add_follow_success">追剧成功，可在我的追剧查看哟~</string>
    <string name="add_to_collection_succeed">已添加至播单</string>
    <string name="add_to_collection_success">已添加至播单</string>
    <string name="advertisement">广告</string>
    <string name="airplay_input_password_text">请输入密码</string>
    <string name="aliauth_auth">淘宝授权</string>
    <string name="aliauth_bind">绑定淘宝账户</string>
    <string name="aliauth_bind_protocal">已阅读并同意《绑定服务协议》</string>
    <string name="aliauth_confirm_bind">立即绑定</string>
    <string name="aliauth_hint_info">为了更好的使用淘宝服务，请绑定一个淘宝账户</string>
    <string name="alibc_trade_container_cancel_auth">用户取消授权</string>
    <string name="alibc_trade_container_cancel_login">用户取消登录</string>
    <string name="alibc_trade_container_mtop_fail">Mtop请求失败</string>
    <string name="alibc_trade_container_parm_error">缺少插件的必要参数</string>
    <string name="alibc_want_addcart_fail_msg">亲请确认网络环境后重试</string>
    <string name="alibc_want_addcart_fail_title">加入淘宝购物车失败</string>
    <string name="alibc_want_addcart_success_msg">亲可随时到淘宝购物车带走它</string>
    <string name="alibc_want_addcart_success_title">加入淘宝购物车成功</string>
    <string name="alibc_want_err_msg">错误:%s</string>
    <string name="alibc_want_not_data_id">没有商品ID</string>
    <string name="alibc_want_not_data_title">没有商品名称</string>
    <string name="alibc_want_widget_type_not_support">对不起,当前组件类型不支持!</string>
    <string name="alipay_error_network_error">网络不给力，请稍后再试。</string>
    <string name="alipay_error_order_pay_fail">支付失败，请重新支付</string>
    <string name="alipay_error_pay_cancel">支付中断，请重新支付</string>
    <string name="alipay_error_pay_process">支付结果处理中。</string>
    <string name="alipay_login_success">已通过支付宝账号登录到您的优酷账号%1$s</string>
    <string name="alipay_request_error">服务器开小差了，请您稍后再试。</string>
    <string name="alisdk_message_10008_action">请稍后重试当前操作，若仍然出错，请反馈至论坛，技术支持或 Android SDK 开发咨询群</string>
    <string name="alisdk_message_10008_message">生成订单地址出错, 错误信息为 {0}</string>
    <string name="alisdk_message_10008_name">GET_ORDER_URL_EXCEPTION</string>
    <string name="alisdk_message_10008_type">E</string>
    <string name="alisdk_message_10009_action">请稍后重试当前操作，若仍然出错，请反馈至论坛，技术支持或 Android SDK 开发咨询群</string>
    <string name="alisdk_message_10009_message">查询订单出错, 错误信息为 {0}</string>
    <string name="alisdk_message_10009_name">QUERY_ORDER_RESULT_EXCEPTION</string>
    <string name="alisdk_message_10009_type">E</string>
    <string name="alisdk_message_14_message">调用外部API传入参数为null，请加入参数再试</string>
    <string name="alisdk_message_17_action" />
    <string name="alisdk_message_17_message">不能获取类名为 {0}，过滤条件为 {1} 的服务</string>
    <string name="alisdk_message_17_name">SERVICE_NOT_AVAILABLE_ERROR</string>
    <string name="alisdk_message_17_type">E</string>
    <string name="alisdk_message_801_action">请调整参数后重试当前操作</string>
    <string name="alisdk_message_801_message">商品数量必须为整数并大于 0</string>
    <string name="alisdk_message_801_name">QUANTITY_FORMAT_ERROR</string>
    <string name="alisdk_message_801_type">E</string>
    <string name="alisdk_message_802_action">请修改传入的淘客 pid，如不确认，请联系淘客相关人员</string>
    <string name="alisdk_message_802_message">当前传入的淘客 pid {0} 非法，正确格式应以 mm_ 为前缀</string>
    <string name="alisdk_message_802_name">INVALID_TAOKE_PID_ERROR</string>
    <string name="alisdk_message_802_type">E</string>
    <string name="alisdk_message_803_action" />
    <string name="alisdk_message_803_message">未设置默认的淘客 pid</string>
    <string name="alisdk_message_803_name">INVALID_DEFAULT_TAOKE_PID</string>
    <string name="alisdk_message_803_type">W</string>
    <string name="alisdk_message_804_action">请准备订单号和支付宝错误码至旺旺支付宝移动支持群(旺旺号:移动收单daily)咨询</string>
    <string name="alisdk_message_804_message">使用支付宝支付失败，支付宝错误码为 8000, 含义为正在处理中</string>
    <string name="alisdk_message_804_name">PAY_IN_PROGRESS</string>
    <string name="alisdk_message_804_type">E</string>
    <string name="alisdk_message_805_action">请准备订单号和支付宝错误码至旺旺支付宝移动支持群(旺旺号:移动收单daily)咨询</string>
    <string name="alisdk_message_805_message">使用支付宝支付失败，支付宝错误码为 4000, 含义为订单支付失败</string>
    <string name="alisdk_message_805_name">PAY_ORDER_FAILED</string>
    <string name="alisdk_message_805_type">E</string>
    <string name="alisdk_message_806_action">请准备订单号和支付宝错误码至旺旺支付宝移动支持群(旺旺号:移动收单daily)咨询</string>
    <string name="alisdk_message_806_message">使用支付宝支付失败，支付宝错误码为 6001, 含义为用户中途取消</string>
    <string name="alisdk_message_806_name">PAY_USER_CANCEL</string>
    <string name="alisdk_message_806_type">E</string>
    <string name="alisdk_message_807_action">请准备订单号和支付宝错误码至旺旺支付宝移动支持群(旺旺号:移动收单daily)咨询</string>
    <string name="alisdk_message_807_message">使用支付宝支付失败，支付宝错误码为 6002, 含义为网络连接出错</string>
    <string name="alisdk_message_807_name">PAY_NETWORK_FAILED</string>
    <string name="alisdk_message_807_type">E</string>
    <string name="alisdk_message_808_action">请准备订单号和支付宝错误码至旺旺支付宝移动支持群(旺旺号:移动收单daily)咨询</string>
    <string name="alisdk_message_808_message">使用支付宝支付失败，支付宝错误码为 {0}</string>
    <string name="alisdk_message_808_name">PAY_COMMON_ERROR</string>
    <string name="alisdk_message_808_type">E</string>
    <string name="alisdk_message_809_message">使用Apliay SDK调用方法失败，请下载最新的ApliaySDK lib包或者使用H5方式付款</string>
    <string name="aliusersdk_api_unauthorized">API未授权</string>
    <string name="aliusersdk_network_error">亲，您的手机网络不太顺畅喔~</string>
    <string name="aliusersdk_session_error">亲，你的操作已超时，请重试</string>
    <string name="already_add">标签已存在</string>
    <string name="app_aggreement_disclaimer_content" />
    <string name="app_aggreement_disclaimer_text">"优酷Youku软件最终用户
使用许可协议"</string>
    <string name="app_aggreement_done_text">同意</string>
    <string name="app_async_success_tip_default">App端已经同步登录成功了</string>
    <string name="app_name">hotpatch</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auth_sdk_message_10003_action" />
    <string name="cancel">取消</string>
    <string name="channel_feed_collect">加入看单</string>
    <string name="channel_feed_dislike">不感兴趣</string>
    <string name="channel_feed_report">举报</string>
    <string name="channel_feed_subscribe">订阅频道</string>
    <string name="close_window">关</string>
    <string name="corner">Corner</string>
    <string name="detail_share">分享</string>
    <string name="home_cache_notify_content">马上去看缓存内容吧</string>
    <string name="home_cache_notify_title">网络未连接</string>
    <string name="home_cache_positive_play_go">看缓存</string>
    <string name="homepage_tab_home">首页</string>
    <string name="homepage_tab_hotspot">发现</string>
    <string name="homepage_tab_plant">星球</string>
    <string name="homepage_tab_user">我的</string>
    <string name="homepage_tab_vip">VIP会员</string>
    <string name="login">登录</string>
    <string name="logout">登出</string>
    <string name="max_window">大</string>
    <string name="menu_cache">下载</string>
    <string name="menu_feedback">反馈</string>
    <string name="menu_gamecenter">游戏</string>
    <string name="menu_rating">评分</string>
    <string name="menu_recommend">应用</string>
    <string name="min_window">小</string>
    <string name="play_history">播放历史</string>
    <string name="refresh">刷新</string>
    <string name="saosao">扫一扫</string>
    <string name="search">搜索</string>
    <string name="settings">设置</string>
    <string name="topic_share_friend">朋友圈</string>
    <string name="topic_share_more">更多</string>
    <string name="topic_share_weixin">微信</string>
    <string name="webview_gotoweb">跳转</string>
    <string name="webview_refresh">刷新</string>
    <string name="window_icon">Window icon</string>
</resources>