<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/content" android:background="@drawable/border" android:layout_width="fill_parent" android:layout_height="150.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/ll_console_windowbar" android:background="#aaff0000" android:padding="4.0dip" android:layout_width="fill_parent" android:layout_height="?android:actionBarSize" android:layout_alignParentTop="true">
        <ImageView android:id="@id/window_icon" android:layout_width="30.0dip" android:layout_height="30.0dip" android:src="@android:drawable/btn_star" android:contentDescription="@string/window_icon" />
        <TextView android:textSize="18.0sp" android:textColor="@android:color/white" android:id="@id/title" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginRight="3.0dip" android:text="Title" android:maxLines="1" android:layout_weight="1.0" />
        <TextView android:textSize="20.0sp" android:textColor="@android:color/black" android:gravity="center" android:id="@id/min_window" android:background="@drawable/poplayer_console_bar_icon" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/min_window" />
        <TextView android:textSize="20.0sp" android:textColor="@android:color/black" android:gravity="center" android:id="@id/max_window" android:background="@drawable/poplayer_console_bar_icon" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/max_window" />
        <TextView android:textSize="20.0sp" android:textColor="@android:color/black" android:gravity="center" android:id="@id/close_window" android:background="@drawable/poplayer_console_bar_icon" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/close_window" />
    </LinearLayout>
    <FrameLayout android:id="@id/body" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/ll_console_windowbar" />
    <ImageView android:id="@id/corner" android:layout_width="?android:actionBarSize" android:layout_height="?android:actionBarSize" android:src="@drawable/poplayer_console_drop_corner" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:contentDescription="@string/corner" />
</RelativeLayout>