<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/more_dialog_layout" android:background="@color/white" android:paddingBottom="30.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/ll_top" android:paddingLeft="@dimen/home_personal_movie_4px" android:paddingTop="18.0dip" android:paddingBottom="13.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/home_personal_movie_font_22px" android:textColor="#ff666666" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/more_wechat" android:paddingLeft="@dimen/home_personal_movie_40px" android:paddingRight="@dimen/home_personal_movie_40px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/topic_share_weixin" android:drawableTop="@drawable/topic_wechat" android:drawablePadding="@dimen/home_personal_movie_font_18px" />
        <TextView android:textSize="@dimen/home_personal_movie_font_22px" android:textColor="#ff666666" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/more_pengyou" android:paddingLeft="@dimen/home_personal_movie_40px" android:paddingRight="@dimen/home_personal_movie_40px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/topic_share_friend" android:drawableTop="@drawable/topic_pengyou" android:drawablePadding="@dimen/home_personal_movie_font_18px" />
        <TextView android:textSize="@dimen/home_personal_movie_font_22px" android:textColor="#ff666666" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/more_more" android:paddingLeft="@dimen/home_personal_movie_40px" android:paddingRight="@dimen/home_personal_movie_40px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/topic_share_more" android:drawableTop="@drawable/topic_more" android:drawablePadding="@dimen/home_personal_movie_font_18px" />
    </LinearLayout>
    <View android:background="#ffeaeaea" android:layout_width="fill_parent" android:layout_height="1.0px" />
    <LinearLayout android:orientation="horizontal" android:id="@id/ll_bottom" android:paddingLeft="@dimen/home_personal_movie_4px" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="13.0dip">
        <TextView android:textSize="@dimen/home_personal_movie_font_22px" android:textColor="#ff666666" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/more_collection" android:paddingLeft="@dimen/home_personal_movie_40px" android:paddingRight="@dimen/home_personal_movie_40px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/channel_feed_collect" android:drawableTop="@drawable/channel_feed_more_colletc" android:drawablePadding="@dimen/home_personal_movie_font_18px" />
        <TextView android:textSize="@dimen/home_personal_movie_font_22px" android:textColor="#ff666666" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/more_subscribe" android:paddingLeft="@dimen/home_personal_movie_40px" android:paddingRight="@dimen/home_personal_movie_40px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/channel_feed_subscribe" android:drawableTop="@drawable/channel_feed_more_subscribe" android:drawablePadding="@dimen/home_personal_movie_font_18px" />
        <TextView android:textSize="@dimen/home_personal_movie_font_22px" android:textColor="#ff666666" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/more_dislike" android:paddingLeft="@dimen/home_personal_movie_40px" android:paddingRight="@dimen/home_personal_movie_40px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/channel_feed_dislike" android:drawableTop="@drawable/channel_feed_more_new_dislike" android:drawablePadding="@dimen/home_personal_movie_font_18px" />
        <TextView android:textSize="@dimen/home_personal_movie_font_22px" android:textColor="#ff666666" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/more_report" android:paddingLeft="@dimen/home_personal_movie_40px" android:paddingRight="@dimen/home_personal_movie_40px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/channel_feed_report" android:drawableTop="@drawable/channel_feed_more_report" android:drawablePadding="@dimen/home_personal_movie_font_18px" />
        <TextView android:textSize="@dimen/home_personal_movie_font_22px" android:textColor="#ff666666" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/more_cancel" android:paddingLeft="@dimen/home_personal_movie_40px" android:paddingRight="@dimen/home_personal_movie_40px" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" android:drawableTop="@drawable/home_personal_movie_card_cancel" android:drawablePadding="@dimen/home_personal_movie_font_18px" />
    </LinearLayout>
</LinearLayout>