<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:orientation="horizontal" android:id="@id/title_layout" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="48.0dip" android:minHeight="48.0dip">
        <RelativeLayout android:id="@id/left_top_layout" android:layout_width="wrap_content" android:layout_height="48.0dip" android:layout_centerVertical="true">
            <TextView android:layout_gravity="center_vertical" android:id="@id/left_top_image" android:background="@drawable/ali_vsdk_back" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_centerVertical="true" />
            <TextView android:textSize="16.0sp" android:textColor="#ff505156" android:gravity="center" android:id="@id/left_top_text" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="3.0dip" android:text="@string/ali_vsdk_titlebar_back" android:layout_toRightOf="@id/left_top_image" android:layout_centerVertical="true" />
        </RelativeLayout>
        <TextView android:textSize="24.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="center" android:id="@id/title_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ali_vsdk_titlebar_name" android:singleLine="true" android:layout_centerInParent="true" />
    </RelativeLayout>
    <FrameLayout android:orientation="vertical" android:background="@drawable/ali_vsdk_background" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.alibaba.verificationsdk.widgets.ALiLoadingView android:layout_gravity="center" android:id="@id/check_login_loading" android:background="@drawable/ali_vsdk_shadu_icon_dengdai_center" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <LinearLayout android:orientation="vertical" android:id="@id/content" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="28.0sp" android:textStyle="normal" android:textColor="#ff000000" android:gravity="center" android:id="@id/tips" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/ali_vsdk_tips" android:singleLine="true" android:drawableBottom="@drawable/ali_vsdk_lock_default" android:drawablePadding="20.0dip" />
            <TextView android:textSize="13.0sp" android:textColor="#ff000000" android:gravity="center" android:id="@id/tips_sub" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="20.0dip" android:text="@string/ali_vsdk_tips_sub" android:maxLines="2" android:lineSpacingExtra="6.0dip" />
            <FrameLayout android:orientation="vertical" android:id="@id/root" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
            <ImageView android:gravity="center" android:id="@id/logo" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/ali_vsdk_logo" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>